<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="211dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="131dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/ic_contact"
        tools:ignore="VectorDrawableCompat" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="174dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/AlcNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lora_bold"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/AlcTvApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/apellido"
        android:textSize="18sp"
        android:fontFamily="@font/lora_bold"
        app:layout_constraintBottom_toTopOf="@+id/AlcTvNumero"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/AlcNombre" />

    <TextView
        android:id="@+id/AlcTvNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/numero"
        android:textSize="18sp"
        android:fontFamily="@font/lora_bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toEndOf="@+id/imageView" />

    <TextView
        android:id="@+id/AlcTvInfNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        android:fontFamily="@font/lora"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/AlcNombre"
        app:layout_constraintStart_toEndOf="@+id/AlcNombre"
        app:layout_constraintTop_toTopOf="@+id/AlcNombre"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AlcTVInfApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="TextView"
        android:fontFamily="@font/lora"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/AlcTvApellido"
        app:layout_constraintStart_toEndOf="@+id/AlcTvApellido"
        app:layout_constraintTop_toTopOf="@+id/AlcTvApellido"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/AlcTvInfNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:fontFamily="@font/lora"
        android:text="TextView"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/AlcTvNumero"
        app:layout_constraintStart_toEndOf="@+id/AlcTvNumero" />
</androidx.constraintlayout.widget.ConstraintLayout>